--- a/regeq.html
+++ b/regeq.html
@@ -32,6 +32,10 @@
     </div>
     <hr>
     <div class="row">
+      <div class="col-xs-12 h3 text-danger" id="error-div">
+        Couldn't parse <span id="first-error">first regex</span><span id="second-error">second regex</span><span id="both-error">either regex</span>.
+      </div>
+
       <div class="col-xs-12 h3" id="equiv-div">
         <span class="text-success">Equivalent</span>
       </div>
